body overflow resolve

--- a/spot.css
+++ b/spot.css
@@ -380,3 +380,7 @@ input::placeholder {
 
 
 }
+
+.body{
+    overflow-x: hidden;
+}
